# xArmViz

./: .gitignore  Cargo.toml
src/: lib.rs  light.rs  main.rs  texture.rs  uniforms.rs
src/camera/: camera.rs  controller.rs  mod.rs  projection.rs  view.rs
src/light/: baker.rs  light.rs  lighting.rs  mod.rs  raw.rs  spotlight.rs  traits.rs
src/model/: instance.rs  material.rs  mesh.rs  mod.rs  model.rs  traits.rs  vertex.rs
src/res/: base.mtl  light.mtl  sphere.mtl
src/shaders/: mod.rs
src/shaders/src/: light.frag  light.vert  model.frag  model.vert  shadow.vert
src/state/: mod.rs  renderer.rs  state.rs  state_core.rs
